--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,10 @@ hr {
 }
 
 /* navigation */
-
+/* Nav */
 .nav {
+    font-size: 14px;
     text-transform: uppercase;
-    font-size: 14px
 }
 
 .nav__link {
@@ -112,9 +112,11 @@ hr {
     vertical-align: top;
     margin: 0 15px;
     position: relative;
+
     color: #fff;
     text-decoration: none;
-    transition: color .2s linear;
+
+    transition: color .1s linear;
 }
 
 .nav__link:after {
@@ -122,12 +124,15 @@ hr {
     display: block;
     width: 100%;
     height: 3px;
-    opacity: 0;
+
     background-color: #fce38a;
+    opacity: 0;
+
     position: absolute;
     top: 100%;
     left: 0;
     z-index: 1;
+
     transition: opacity .1s linear;
 }
 
@@ -144,47 +149,46 @@ hr {
     color: #fce38a;
 }
 
-/* nav toggle */
- 
+
+/* Nav toggle */
 .nav__toggle {
     width: 30px;
     padding: 10px 0;
-    position: absolute;
     display: none;
-    top: 24px;
+
     font-size: 0;
     color: transparent;
+
     border: 0;
     background: none;
     cursor: pointer;
+
+    position: absolute;
+    top: 24px;
     right: 24px;
     z-index: 1;
 }
 
+.nav__toggle:focus {
+    outline: 0;
+}
+
 .nav__toggle--item {
+    display: block;
     width: 100%;
     height: 3px;
-    display: block;
+
     background-color: #fff;
+
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     margin: auto;
+
     transition: background .2s linear;
 }
-
-.nav__toggle.active .nav__toggle--item:before {
-    transform-origin: left top;
-    transform: rotate(45deg)  translate3d(0px, -2px, 0);
-}
-
-.nav__toggle.active .nav__toggle--item:after {
-    transform-origin: left bottom;
-    transform: rotate(-45deg)   translate3d(0px, 3px, 0);
-}
-
 
 .nav__toggle.active .nav__toggle--item {
     background: none;
@@ -195,19 +199,32 @@ hr {
     content: "";
     width: 100%;
     height: 3px;
-    position: absolute;
+
     background-color: #fff;
+
+    position: absolute;
     left: 0;
     z-index: 1;
+
     transition: transform .2s linear;
 }
 
 .nav__toggle--item:before {
-    top: -8px
+    top: -8px;
 }
 
 .nav__toggle--item:after {
     bottom: -8px;
+}
+
+.nav__toggle.active .nav__toggle--item:before {
+    transform-origin: left top;
+    transform: rotate(45deg) translate3d(0px, -2px, 0)
+}
+
+.nav__toggle.active .nav__toggle--item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg) translate3d(0px, 3px, 0);
 }
 
 /* Intro */
@@ -669,6 +686,7 @@ hr {
 }
 
 .testimonials__item {
+    min-height: 210px;
     padding-left: 255px;
     position: relative;
 }
@@ -1400,12 +1418,16 @@ hr {
      /* Nav */
     
       .nav {
-          /* display: none; */
+          display: none; 
           width: 100%;
           position: absolute;
           top: 100%;
           left: 0;
           background-color: #eb8b8d;
+      }
+
+      .nav.active {
+          display: block;
       }
 
       .nav__link {
